--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gas Temple ⛩️ 功德无量</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Press+Start+2P&family=Share+Tech+Mono&family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Press+Start+2P&family=Share+Tech+Mono&family=Libre+Barcode+39+Text&family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
